# packagemanagermigration

./: Cargo.toml  README.md
src/: apt_man.rs  brew_man.rs  cargo_man.rs  main.rs  packmanager.rs  win_man.rs
