[package]
name = "packagemanagermigration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.108", features = [] }
color-backtrace = { version = "0.6" }
colored = "2.1.0"
env_logger = "0.10.1"
log = "0.4.20"
rayon = "1.8.*"